[package]
name = "rsyalgo"
version.workspace = true
authors.workspace = true
description = "A wrapper for all algorithms implemeted with rust"
edition.workspace = true
homepage.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
categories = ["algorithms"]
keywords = ["algorithms"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[package.metadata.docs.rs]
all-features.workspace = true
rustdoc-args.workspace = true
targets.workspace = true

[features]

[dependencies]
ahash = "^0.8"
dashmap = "^6"
rand = "^0"

[lints]
workspace = true
