[package]
name = "rsyasync"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
futures = "^0.3"
mio = "^1"
pollster = "^0.4"
tokio = "^1"

[lints]
workspace = true
