[package]
name = "rsyasync"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
[dependencies.async-channel]
version = "^2"
default-features = false
optional = true
[dependencies.async-lock]
version = "^3"
default-features = false
optional = true

[dependencies.futures]
version = "^0.3"
default-features = false
optional = true

[dependencies.mio]
version = "^1"
default-features = false
optional = true

[dependencies.pollster]
version = "^0.4"
default-features = false
optional = true

[dependencies.tokio]
version = "^1"
default-features = false
optional = true

[lints]
workspace = true
