[package]
name = "rsyconfig"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
build = "build.rs"

[features]
default = ["toml", "async"]
toml = ["config/toml"]
yaml = ["config/yaml"]
json = ["config/json"]
ini = ["config/ini"]
json5 = ["config/json5"]
convert-case = ["config/convert-case"]
preserve_order = ["config/preserve_order"]
async = ["config/async"]

[dependencies]

# [`config`](https://github.com/rust-cli/config-rs) Layered configuration system for Rust
# applications (with strong support for 12-factor applications).
[dependencies.config]
version = "^0.15"
default-features = false
optional = true

# [`dotenvy`](https://github.com/allan2/dotenvy) loads environment variables from a .env file.
# This is convenient for dev environments.
[dependencies.dotenvy]
version = "^0.15"
default-features = false
optional = true

[build-dependencies]

[dev-dependencies]

[lints]
workspace = true
