[package]
name = "rsydb"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
# [`sled`](https://github.com/spacejam/sled) is a high-performance embedded database with an API
# that is similar to a BTreeMap<[u8], [u8]>, but with several additional capabilities for assisting
# creators of stateful systems.
sled = "^0.34"

[lints]
workspace = true
