[package]
name = "rsyerr"
authors.workspace = true
description = "rust error handling wrapper"
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
categories = []
keywords = ["infrastructure", "log", "mem", "network"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]

[lib]
crate-type = ["rlib", "cdylib"]

[features]


[dependencies]
anyhow = "^1"
thiserror = "^2"

[lints]
workspace = true
