[package]
name = "rsyffi"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
[lib]
crate-type = ["rlib"]

[features]
default = []

[dependencies]
[dependencies.libloading]
version = "^0.8"
default-features = false
optional = true

[lints]
workspace = true
