[package]
name = "rsyfs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
notify = "^8"
walkdir = "^2"

[lints]
workspace = true
