[package]
name = "rsygui"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []

[dependencies]
[dependencies.eframe]
version = "^0.31"
default-features = true

[lints]
workspace = true
