[package]
name = "rsylog"
authors.workspace = true
description = "A wrapper for rust logging crates"
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true
readme = "README.md"
categories = ["logging"]
keywords = ["logging", "log"]
include = ["../LICENSE-APACHE", "../LICENSE-MIT", "**/*.rs", "Cargo.toml"]


[package.metadata.docs.rs]
all-features.workspace = true
rustdoc-args.workspace = true
targets.workspace = true

[features]

[dependencies]

[lints]
workspace = true
