[package]
name = "rsysync"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
parking_lot = "0.12.3"

[lints]
workspace = true
